--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,32 @@
+# Compiled class files
+*.class
+
+# Package Files
+*.jar
+*.war
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# Log Files
+*.log
+log/
+logs/
+
+# Build artifacts
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-### IntelliJ IDEA ###
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
+# IntelliJ IDEA files
+.idea/
 *.iws
 *.iml
 *.ipr
 
-### Eclipse ###
+# Eclipse files
 .apt_generated
 .classpath
 .factorypath
@@ -21,7 +35,7 @@ target/
 .springBeans
 .sts4-cache
 
-### NetBeans ###
+# NetBeans files
 /nbproject/private/
 /nbbuild/
 /dist/
@@ -31,8 +45,9 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-### VS Code ###
+# VS Code files
 .vscode/
 
-### Mac OS ###
+# OS generated files
 .DS_Store
+Thumbs.db
